@@ -330,6 +330,8 @@ BUGFIXES:
 
   ZOOKEEPER-1185. Send AuthFailed event to client if SASL authentication fails.
   (Eugene Kuntz via mahadev)
+  
+  ZOOKEEPER-1174. FD leak when network unreachable (Ted Dunning via camille)
 
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
